<resources>
    <string name="app_name">Simranda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kode_rekening">Kode Rekening:</string>
    <string name="user">User:</string>
    <string name="tanggal_entry">Tanggal Entry:</string>
    <string name="keterangan">Keterangan:</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="tahun">Tahun</string>
    <string name="cari">Cari</string>
    <string name="search_hint">Cari</string>
    <string name="kota">Kode Kota</string>
    <string name="title">Kode Rekening</string>
    <string name="description">Keterangan</string>
    <string name="submit">Submit</string>
    <string name="insertrekening">Insert Rekening</string>
    <string name="kode_kota">Kode Kota:</string>
    <string name="hapus">Hapus Data</string>
    <string name="tanggal_input">Tanggal Input</string>
    <string name="anggaran">Anggaran</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>
    <string name="laporan">Laporan</string>
    <string name="master_data">Master Data</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="master_data_rekening">Master Data Rekening</string>
    <string name="program_dan_kegiatan">Program dan Kegiatan</string>
    <string name="master_data_program_dan_kegiatan">Master Data Program dan Kegiatan</string>
    <string name="master_data_organisasi">Master Data Organisasi</string>
    <string name="setting_data">Setting Data</string>
    <string name="default_city">"254"</string>
    <string name="default_year">2018</string>
    <string name="nama_organisasi">Nama Organisasi:</string>
    <string name="nama_bagian">Nama Bagian:</string>
    <string name="fungsi">Fungsi:</string>
    <string name="perbarui_data">Perbarui Data</string>
    <string name="input_data_organisasi">Input Data Organisasi</string>
    <string name="keterangan_skpd">Keterangan SKPD</string>
    <string name="nama_bagiann">Nama Bagian</string>
    <string name="nama_fungsi">Nama Fungsi</string>
    <string name="kode_org">Kode ORG</string>
    <string name="userr">User</string>
    <string name="nama_kegiatan">Nama Kegiatan</string>
    <string name="nama_program">Nama Program</string>
    <string name="kode_bag">Kode Bag</string>
    <string name="organisasi_skpd">Organisasi / SKPD</string>
    <string name="default_user">android</string>
    <string name="pilih">Pilih</string>
    <string name="kode_program_dan_kegiatan">Kode Program dan Kegiatan</string>
    <string name="kode_skpd">Kode SKPD</string>
    <string name="kode_bagian">Kode Bagian</string>
    <string name="kode_program">Kode Program</string>
    <string name="kode_kegiatan">Kode Kegiatan</string>
    <string name="kode_rekeningg">Kode Rekening</string>
    <string name="halaman_dokumen">Halaman Dokumen</string>
    <string name="nominal_anggaran">Nominal Anggaran</string>
    <string name="titik_dua">:</string>
    <string name="default_key">dummy</string>
</resources>