<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    tools:context=".ui.master.programdankegiatan.InsertKegiatanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/edt_organisasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/organisasi_skpd"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_select_organisasi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/pilih" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/edt_bagian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Kode dan Nama Bagian"
                android:importantForAutofill="no"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/edt_kode_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kode_program_dan_kegiatan"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/edt_nama_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_program"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/edt_nama_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_kegiatan"
                android:importantForAutofill="no"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>